<resources>
    <string name="app_name" translatable="false">Pali_Deсlamations</string>
    <string name="title_activity_bottom" translatable="false">bottomActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="mainButtonLiveBuddha">Жизнеописание Будды</string>
    <string name="mainButtonStofiDlyaDeclomacii">Строфы для декламаций</string>
    <string name="mainButtonShortSuttas">Модель практики буддийского \n пути</string>
    <string name="mainButtonMonksRules">Монашеские правила и \n церемонии</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="namerenie_sumedhi">1. Намерение Сумедхи</string>
    <string name="son_mahamayi">2. Сон Махамайи</string>
    <string name="rogdenie_sidharthi">3. Рождение Сидхартхи</string>
    <string name="mudrec_asita">4. Мудрец Асита</string>
    <string name="pervoe_dostigenie_dgani">5. Первое достижение джханы</string>
    <string name="spasenie_lebedya">6. Спасение лебедя</string>
    <string name="demonstraciya_umenii">7. Демонстрация умений</string>
    <string name="pudja">Вандана</string>
    <string name="sutta">Сутта</string>
    <string name="drugie_declomacii">Другие декламации</string>
    <string name="button_karaniya_metta">Карания метта сутта</string>
    <string name="utrennaia_pudga">Утренняя вандана в Читтавивеке</string>
    <string name="decl_pered_priemom_pichi">декламация перед приёмом пищи</string>
    <string name="prosba_o_prochenii_nedostatkov">Просьба о прощении недостатков перед старшими монахами</string>
    <string name="blagopogelaniya_pri_vzyatii_pichi">Благопожелания мирянам при взятии даны</string>
    <string name="rukovodstvo_dlya_samaner">руководство для саманер</string>
    <string name="sekhiya_n">75 секхийа \n правила для тренировки</string>
    <string name="pabaja_text">паббаджжа \n строфы для церемонии становления саманерой</string>
    <string name="button_morning_vandana_with_laymans">Вандана с мирянами в монастыре Читтавивека</string>
    <string name="deklomation_after_evening_meditation">Декламация после вечерней медитации в монастыре Читтавивека</string>
    <string name="buttonPlayMettaSutta" translatable="false">play</string>
    <string name="buttonStopMettaSutta" translatable="false">stop</string>
    <string name="buttonRewind" translatable="false"><![CDATA[<<]]></string>
    <string name="buttonFastForward" translatable="false"><![CDATA[>>]]></string>
    <string name="button_sutta_mangala">маха мангала сутта</string>
    <string name="button_sutta_ratana">ратана сутта</string>
    <string name="rukovodstvo_dllya_bhikkhu">руководство для бхиккху</string>
    <string name="button_upasampada">упасампада \n Строфы для церемонии становления Бхикху</string>
    <string name="button_patimokha">Правила патимокхи</string>
    <string name="buttonAboutParajika">! О ПРАВИЛАХ ПАТИМОККХИ !</string>
    <string name="buttonaboutParajikaNakazanie">! СИСТЕМА НАКАЗАНИЙ, ПРЕДУСМАТРИВАЕМАЯ ПРАВИЛАМИ ПАТИМОККХИ !</string>
    <string name="buttonPatimokhaRazdelParajika">РАЗДЕЛ ПАРАДЖИКА</string>
    <string name="buttonParajika1">1 \n Если какой-либо монах, участвующий в обучении и образе жизни монахов, без отказа от обучения, без открытого объявления о своей слабости, совершит половой акт с женщиной или с самкой животного, такой монах потерпел поражение и более не состоит в сангхе.</string>
    <string name="textPatimokhaParajika1" translatable="false"> \n
        Pàr 1: (Methunadhammasikkhàpadam): \n \n \n
        <b>Yo pana bhikkhu bhikkhūnaṃ sikkhāsājīvasamāpanno sikkhaṃ</b> \n \n
        <b>appaccakkhāya dubbalyaṃ anāvikatvā methunaṃ dhammaṃ</b> \n \n
        <b>paṭiseveyya, antamaso tiracchānagatāya pi; pārājiko hoti, asaṃvāso.</b> \n \n \n</string>
    <string name="buttonRiulesPatimokhaParajika2">2 \n Если какой-либо монах, на манер вора, возьмет то, что ему не было дано, безразлично, в заселенной области или нет, так что правитель, схватив преступника, может подвергнуть его телесному наказанию, заключить в тюрьму или изгнать его – такой монах потерпел поражение и более не состоит в сангхе.</string>
    <string name="textPatimokhaParajika2" translatable="false"> \n
        Pàr 2: (Adinnàdànasikkhàpadam): \n \n \n
        <b>Yo pana bhikkhu gāmā vā araññā vā \n \n adinnaṃ theyyasaṅkhātaṃ
        ādiyeyya, yathārūpe adinnādāne \n \n rājāno coraṃ gahetvā haneyyuṃ vā
        bandheyyuṃ vā pabbājeyyuṃ vā: \n \n Coro’si, bālo’si, mūlho’si, theno’sī ti,
        tathārūpaṃ bhikkhu adinnaṃ ādiyamāno; \n \n ayam-pi pārājiko hoti, asaṃvāso. </b></string>
    <string name="buttonRiulesPatimokhaParajika3">3 \n Если какой-либо монах намеренно лишит жизни человеческое существо, или наймет убийцу для него, или будет восхвалять преимущества смерти, или будет уговаривать его умереть (примерно таким образом): "Уважаемый, какая польза вам от этой жалкой, несчастной жизни? Смерть была бы лучше для вас, чем жизнь", - тогда такой монах потерпел поражение и более не состоит в сангхе.</string>
    <string name="textPatimokhaParajika3" translatable="false"> \n
        Pàr 3: (Manussaviggahasikkhàpadam): \n \n \n
        <b>Yo pana bhikkhu sañcicca manussaviggahaṃ jīvitā voropeyya, \n \n
            satthahārakaṃ vāssa pariyeseyya, maraṇavaṇṇaṃ vā saṃvaṇṇeyya, \n \n
            maraṇāya vā samādapeyya: Ambho purisa, kiṃ tuyh’iminā pāpakena \n \n
            dujjīvitena? Matan-te jīvitā seyyo ti, iti cittamano cittasaṅkappo \n \n
            anekapariyāyena maraṇavaṇṇaṃ vā saṃvaṇṇeyya, maraṇāya vā \n \n
            samādapeyya; ayam-pi pārājiko hoti, asaṃvāso.</b></string>
    <string name="buttonRiulesPatimokhaParajika4">4. \n Если какой-либо монах, не обладающий истинным знанием, хвастается достижением сверхнормальных человеческих состояний, говоря: "Так я знаю, так я вижу", так что, несмотря на то, будет или нет он проверен позднее, – такой монах потерпел поражение и более не состоит в сангхе.</string>
    <string name="textPatimokhaParajika4" translatable="false"> \n
        Pàr 4: (Uttarimanussadhammasikkhàpadam): \n \n \n
        <b>Yo pana bhikkhu anabhijānaṃ uttarimanussadhammaṃ attūpanāyikaṃ \n \n
            alamariyañāṇadassanaṃ samudācareyya: Iti jānāmi, iti passāmī ti! Tato \n \n
            aparena samayena samanuggāhiyamāno vā asamanuggāhiyamāno vā \n \n
            āpanno visuddhāpekkho evaṃ vadeyya: Ajānam-evāhaṃ āvuso \n \n
            avacaṃ: jānāmi. Apassaṃ: passāmi. Tucchaṃ musā vilapin-ti. Aññatra \n \n
            adhimānā, ayam-pi pārājiko hoti, asaṃvāso.</b></string>
    <string name="textViewHintParajika">Нажмите на правило, для того чтобы увидеть правило на языке пали.</string>
</resources>